--- a/src/style/globalStyle.css
+++ b/src/style/globalStyle.css
@@ -1,7 +1,7 @@
 html,
 body {
   margin: 0;
-  direction: rtl;
+  direction: ltr;
   padding: 0;
   box-sizing: border-box;
   font-family: "Courier New", Courier, monospace;
