--- a/src/style/globalStyle.css
+++ b/src/style/globalStyle.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: IRANSans, "Courier New", Courier, monospace;
+  /* direction: rtl; */
 }
 a {
   text-decoration: none;
